src/libqtoolbar.h

#pragma once
#ifndef SRCC_LIBQTOOLBAR_H
#define SRCC_LIBQTOOLBAR_H

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

#ifdef __GNUC__
#pragma GCC diagnostic ignored "-Wdeprecated-declarations"
#endif

#include "qtlibc.h"

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
#if defined(WORKAROUND_INNER_CLASS_DEFINITION_QMetaObject__Connection)
typedef QMetaObject::Connection QMetaObject__Connection;
#endif
#else
typedef struct QAction QAction;
typedef struct QActionEvent QActionEvent;
typedef struct QAnyStringView QAnyStringView;
typedef struct QBackingStore QBackingStore;
typedef struct QBindingStorage QBindingStorage;
typedef struct QBitmap QBitmap;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QCursor QCursor;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QFont QFont;
typedef struct QFontInfo QFontInfo;
typedef struct QFontMetrics QFontMetrics;
typedef struct QGraphicsEffect QGraphicsEffect;
typedef struct QGraphicsProxyWidget QGraphicsProxyWidget;
typedef struct QHideEvent QHideEvent;
typedef struct QIcon QIcon;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QKeySequence QKeySequence;
typedef struct QLayout QLayout;
typedef struct QLocale QLocale;
typedef struct QMargins QMargins;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMetaObject__Connection QMetaObject__Connection;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPalette QPalette;
typedef struct QPixmap QPixmap;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QResizeEvent QResizeEvent;
typedef struct QScreen QScreen;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QSizePolicy QSizePolicy;
typedef struct QStyle QStyle;
typedef struct QStyleOptionToolBar QStyleOptionToolBar;
typedef struct QTabletEvent QTabletEvent;
typedef struct QThread QThread;
typedef struct QTimerEvent QTimerEvent;
typedef struct QToolBar QToolBar;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
typedef struct QWindow QWindow;
#endif

QToolBar* QToolBar_new(QWidget* parent);
QToolBar* QToolBar_new2(libqt_string title);
QToolBar* QToolBar_new3();
QToolBar* QToolBar_new4(libqt_string title, QWidget* parent);
QMetaObject* QToolBar_MetaObject(const QToolBar* self);
void* QToolBar_Metacast(QToolBar* self, const char* param1);
int QToolBar_Metacall(QToolBar* self, int param1, int param2, void** param3);
void QToolBar_OnMetacall(QToolBar* self, intptr_t slot);
int QToolBar_QBaseMetacall(QToolBar* self, int param1, int param2, void** param3);
libqt_string QToolBar_Tr(const char* s);
void QToolBar_SetMovable(QToolBar* self, bool movable);
bool QToolBar_IsMovable(const QToolBar* self);
void QToolBar_SetAllowedAreas(QToolBar* self, int areas);
int QToolBar_AllowedAreas(const QToolBar* self);
bool QToolBar_IsAreaAllowed(const QToolBar* self, int area);
void QToolBar_SetOrientation(QToolBar* self, int orientation);
int QToolBar_Orientation(const QToolBar* self);
void QToolBar_Clear(QToolBar* self);
QAction* QToolBar_AddSeparator(QToolBar* self);
QAction* QToolBar_InsertSeparator(QToolBar* self, QAction* before);
QAction* QToolBar_AddWidget(QToolBar* self, QWidget* widget);
QAction* QToolBar_InsertWidget(QToolBar* self, QAction* before, QWidget* widget);
QRect* QToolBar_ActionGeometry(const QToolBar* self, QAction* action);
QAction* QToolBar_ActionAt(const QToolBar* self, QPoint* p);
QAction* QToolBar_ActionAt2(const QToolBar* self, int x, int y);
QAction* QToolBar_ToggleViewAction(const QToolBar* self);
QSize* QToolBar_IconSize(const QToolBar* self);
int QToolBar_ToolButtonStyle(const QToolBar* self);
QWidget* QToolBar_WidgetForAction(const QToolBar* self, QAction* action);
bool QToolBar_IsFloatable(const QToolBar* self);
void QToolBar_SetFloatable(QToolBar* self, bool floatable);
bool QToolBar_IsFloating(const QToolBar* self);
void QToolBar_SetIconSize(QToolBar* self, QSize* iconSize);
void QToolBar_SetToolButtonStyle(QToolBar* self, int toolButtonStyle);
void QToolBar_ActionTriggered(QToolBar* self, QAction* action);
void QToolBar_Connect_ActionTriggered(QToolBar* self, intptr_t slot);
void QToolBar_MovableChanged(QToolBar* self, bool movable);
void QToolBar_Connect_MovableChanged(QToolBar* self, intptr_t slot);
void QToolBar_AllowedAreasChanged(QToolBar* self, int allowedAreas);
void QToolBar_Connect_AllowedAreasChanged(QToolBar* self, intptr_t slot);
void QToolBar_OrientationChanged(QToolBar* self, int orientation);
void QToolBar_Connect_OrientationChanged(QToolBar* self, intptr_t slot);
void QToolBar_IconSizeChanged(QToolBar* self, QSize* iconSize);
void QToolBar_Connect_IconSizeChanged(QToolBar* self, intptr_t slot);
void QToolBar_ToolButtonStyleChanged(QToolBar* self, int toolButtonStyle);
void QToolBar_Connect_ToolButtonStyleChanged(QToolBar* self, intptr_t slot);
void QToolBar_TopLevelChanged(QToolBar* self, bool topLevel);
void QToolBar_Connect_TopLevelChanged(QToolBar* self, intptr_t slot);
void QToolBar_VisibilityChanged(QToolBar* self, bool visible);
void QToolBar_Connect_VisibilityChanged(QToolBar* self, intptr_t slot);
void QToolBar_ActionEvent(QToolBar* self, QActionEvent* event);
void QToolBar_OnActionEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseActionEvent(QToolBar* self, QActionEvent* event);
void QToolBar_ChangeEvent(QToolBar* self, QEvent* event);
void QToolBar_OnChangeEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseChangeEvent(QToolBar* self, QEvent* event);
void QToolBar_PaintEvent(QToolBar* self, QPaintEvent* event);
void QToolBar_OnPaintEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBasePaintEvent(QToolBar* self, QPaintEvent* event);
bool QToolBar_Event(QToolBar* self, QEvent* event);
void QToolBar_OnEvent(QToolBar* self, intptr_t slot);
bool QToolBar_QBaseEvent(QToolBar* self, QEvent* event);
void QToolBar_InitStyleOption(const QToolBar* self, QStyleOptionToolBar* option);
void QToolBar_OnInitStyleOption(const QToolBar* self, intptr_t slot);
void QToolBar_QBaseInitStyleOption(const QToolBar* self, QStyleOptionToolBar* option);
libqt_string QToolBar_Tr2(const char* s, const char* c);
libqt_string QToolBar_Tr3(const char* s, const char* c, int n);
int QToolBar_DevType(const QToolBar* self);
void QToolBar_OnDevType(const QToolBar* self, intptr_t slot);
int QToolBar_QBaseDevType(const QToolBar* self);
void QToolBar_SetVisible(QToolBar* self, bool visible);
void QToolBar_OnSetVisible(QToolBar* self, intptr_t slot);
void QToolBar_QBaseSetVisible(QToolBar* self, bool visible);
QSize* QToolBar_SizeHint(const QToolBar* self);
void QToolBar_OnSizeHint(const QToolBar* self, intptr_t slot);
QSize* QToolBar_QBaseSizeHint(const QToolBar* self);
QSize* QToolBar_MinimumSizeHint(const QToolBar* self);
void QToolBar_OnMinimumSizeHint(const QToolBar* self, intptr_t slot);
QSize* QToolBar_QBaseMinimumSizeHint(const QToolBar* self);
int QToolBar_HeightForWidth(const QToolBar* self, int param1);
void QToolBar_OnHeightForWidth(const QToolBar* self, intptr_t slot);
int QToolBar_QBaseHeightForWidth(const QToolBar* self, int param1);
bool QToolBar_HasHeightForWidth(const QToolBar* self);
void QToolBar_OnHasHeightForWidth(const QToolBar* self, intptr_t slot);
bool QToolBar_QBaseHasHeightForWidth(const QToolBar* self);
QPaintEngine* QToolBar_PaintEngine(const QToolBar* self);
void QToolBar_OnPaintEngine(const QToolBar* self, intptr_t slot);
QPaintEngine* QToolBar_QBasePaintEngine(const QToolBar* self);
void QToolBar_MousePressEvent(QToolBar* self, QMouseEvent* event);
void QToolBar_OnMousePressEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseMousePressEvent(QToolBar* self, QMouseEvent* event);
void QToolBar_MouseReleaseEvent(QToolBar* self, QMouseEvent* event);
void QToolBar_OnMouseReleaseEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseMouseReleaseEvent(QToolBar* self, QMouseEvent* event);
void QToolBar_MouseDoubleClickEvent(QToolBar* self, QMouseEvent* event);
void QToolBar_OnMouseDoubleClickEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseMouseDoubleClickEvent(QToolBar* self, QMouseEvent* event);
void QToolBar_MouseMoveEvent(QToolBar* self, QMouseEvent* event);
void QToolBar_OnMouseMoveEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseMouseMoveEvent(QToolBar* self, QMouseEvent* event);
void QToolBar_WheelEvent(QToolBar* self, QWheelEvent* event);
void QToolBar_OnWheelEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseWheelEvent(QToolBar* self, QWheelEvent* event);
void QToolBar_KeyPressEvent(QToolBar* self, QKeyEvent* event);
void QToolBar_OnKeyPressEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseKeyPressEvent(QToolBar* self, QKeyEvent* event);
void QToolBar_KeyReleaseEvent(QToolBar* self, QKeyEvent* event);
void QToolBar_OnKeyReleaseEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseKeyReleaseEvent(QToolBar* self, QKeyEvent* event);
void QToolBar_FocusInEvent(QToolBar* self, QFocusEvent* event);
void QToolBar_OnFocusInEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseFocusInEvent(QToolBar* self, QFocusEvent* event);
void QToolBar_FocusOutEvent(QToolBar* self, QFocusEvent* event);
void QToolBar_OnFocusOutEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseFocusOutEvent(QToolBar* self, QFocusEvent* event);
void QToolBar_EnterEvent(QToolBar* self, QEnterEvent* event);
void QToolBar_OnEnterEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseEnterEvent(QToolBar* self, QEnterEvent* event);
void QToolBar_LeaveEvent(QToolBar* self, QEvent* event);
void QToolBar_OnLeaveEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseLeaveEvent(QToolBar* self, QEvent* event);
void QToolBar_MoveEvent(QToolBar* self, QMoveEvent* event);
void QToolBar_OnMoveEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseMoveEvent(QToolBar* self, QMoveEvent* event);
void QToolBar_ResizeEvent(QToolBar* self, QResizeEvent* event);
void QToolBar_OnResizeEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseResizeEvent(QToolBar* self, QResizeEvent* event);
void QToolBar_CloseEvent(QToolBar* self, QCloseEvent* event);
void QToolBar_OnCloseEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseCloseEvent(QToolBar* self, QCloseEvent* event);
void QToolBar_ContextMenuEvent(QToolBar* self, QContextMenuEvent* event);
void QToolBar_OnContextMenuEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseContextMenuEvent(QToolBar* self, QContextMenuEvent* event);
void QToolBar_TabletEvent(QToolBar* self, QTabletEvent* event);
void QToolBar_OnTabletEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseTabletEvent(QToolBar* self, QTabletEvent* event);
void QToolBar_DragEnterEvent(QToolBar* self, QDragEnterEvent* event);
void QToolBar_OnDragEnterEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseDragEnterEvent(QToolBar* self, QDragEnterEvent* event);
void QToolBar_DragMoveEvent(QToolBar* self, QDragMoveEvent* event);
void QToolBar_OnDragMoveEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseDragMoveEvent(QToolBar* self, QDragMoveEvent* event);
void QToolBar_DragLeaveEvent(QToolBar* self, QDragLeaveEvent* event);
void QToolBar_OnDragLeaveEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseDragLeaveEvent(QToolBar* self, QDragLeaveEvent* event);
void QToolBar_DropEvent(QToolBar* self, QDropEvent* event);
void QToolBar_OnDropEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseDropEvent(QToolBar* self, QDropEvent* event);
void QToolBar_ShowEvent(QToolBar* self, QShowEvent* event);
void QToolBar_OnShowEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseShowEvent(QToolBar* self, QShowEvent* event);
void QToolBar_HideEvent(QToolBar* self, QHideEvent* event);
void QToolBar_OnHideEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseHideEvent(QToolBar* self, QHideEvent* event);
bool QToolBar_NativeEvent(QToolBar* self, libqt_string eventType, void* message, intptr_t* result);
void QToolBar_OnNativeEvent(QToolBar* self, intptr_t slot);
bool QToolBar_QBaseNativeEvent(QToolBar* self, libqt_string eventType, void* message, intptr_t* result);
void QToolBar_InputMethodEvent(QToolBar* self, QInputMethodEvent* param1);
void QToolBar_OnInputMethodEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseInputMethodEvent(QToolBar* self, QInputMethodEvent* param1);
QVariant* QToolBar_InputMethodQuery(const QToolBar* self, int param1);
void QToolBar_OnInputMethodQuery(const QToolBar* self, intptr_t slot);
QVariant* QToolBar_QBaseInputMethodQuery(const QToolBar* self, int param1);
bool QToolBar_FocusNextPrevChild(QToolBar* self, bool next);
void QToolBar_OnFocusNextPrevChild(QToolBar* self, intptr_t slot);
bool QToolBar_QBaseFocusNextPrevChild(QToolBar* self, bool next);
bool QToolBar_EventFilter(QToolBar* self, QObject* watched, QEvent* event);
void QToolBar_OnEventFilter(QToolBar* self, intptr_t slot);
bool QToolBar_QBaseEventFilter(QToolBar* self, QObject* watched, QEvent* event);
void QToolBar_TimerEvent(QToolBar* self, QTimerEvent* event);
void QToolBar_OnTimerEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseTimerEvent(QToolBar* self, QTimerEvent* event);
void QToolBar_ChildEvent(QToolBar* self, QChildEvent* event);
void QToolBar_OnChildEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseChildEvent(QToolBar* self, QChildEvent* event);
void QToolBar_CustomEvent(QToolBar* self, QEvent* event);
void QToolBar_OnCustomEvent(QToolBar* self, intptr_t slot);
void QToolBar_QBaseCustomEvent(QToolBar* self, QEvent* event);
void QToolBar_ConnectNotify(QToolBar* self, QMetaMethod* signal);
void QToolBar_OnConnectNotify(QToolBar* self, intptr_t slot);
void QToolBar_QBaseConnectNotify(QToolBar* self, QMetaMethod* signal);
void QToolBar_DisconnectNotify(QToolBar* self, QMetaMethod* signal);
void QToolBar_OnDisconnectNotify(QToolBar* self, intptr_t slot);
void QToolBar_QBaseDisconnectNotify(QToolBar* self, QMetaMethod* signal);
int QToolBar_Metric(const QToolBar* self, int param1);
void QToolBar_OnMetric(const QToolBar* self, intptr_t slot);
int QToolBar_QBaseMetric(const QToolBar* self, int param1);
void QToolBar_InitPainter(const QToolBar* self, QPainter* painter);
void QToolBar_OnInitPainter(const QToolBar* self, intptr_t slot);
void QToolBar_QBaseInitPainter(const QToolBar* self, QPainter* painter);
QPaintDevice* QToolBar_Redirected(const QToolBar* self, QPoint* offset);
void QToolBar_OnRedirected(const QToolBar* self, intptr_t slot);
QPaintDevice* QToolBar_QBaseRedirected(const QToolBar* self, QPoint* offset);
QPainter* QToolBar_SharedPainter(const QToolBar* self);
void QToolBar_OnSharedPainter(const QToolBar* self, intptr_t slot);
QPainter* QToolBar_QBaseSharedPainter(const QToolBar* self);
void QToolBar_UpdateMicroFocus(QToolBar* self);
void QToolBar_OnUpdateMicroFocus(QToolBar* self, intptr_t slot);
void QToolBar_QBaseUpdateMicroFocus(QToolBar* self);
void QToolBar_Create(QToolBar* self);
void QToolBar_OnCreate(QToolBar* self, intptr_t slot);
void QToolBar_QBaseCreate(QToolBar* self);
void QToolBar_Destroy(QToolBar* self);
void QToolBar_OnDestroy(QToolBar* self, intptr_t slot);
void QToolBar_QBaseDestroy(QToolBar* self);
bool QToolBar_FocusNextChild(QToolBar* self);
void QToolBar_OnFocusNextChild(QToolBar* self, intptr_t slot);
bool QToolBar_QBaseFocusNextChild(QToolBar* self);
bool QToolBar_FocusPreviousChild(QToolBar* self);
void QToolBar_OnFocusPreviousChild(QToolBar* self, intptr_t slot);
bool QToolBar_QBaseFocusPreviousChild(QToolBar* self);
QObject* QToolBar_Sender(const QToolBar* self);
void QToolBar_OnSender(const QToolBar* self, intptr_t slot);
QObject* QToolBar_QBaseSender(const QToolBar* self);
int QToolBar_SenderSignalIndex(const QToolBar* self);
void QToolBar_OnSenderSignalIndex(const QToolBar* self, intptr_t slot);
int QToolBar_QBaseSenderSignalIndex(const QToolBar* self);
int QToolBar_Receivers(const QToolBar* self, const char* signal);
void QToolBar_OnReceivers(const QToolBar* self, intptr_t slot);
int QToolBar_QBaseReceivers(const QToolBar* self, const char* signal);
bool QToolBar_IsSignalConnected(const QToolBar* self, QMetaMethod* signal);
void QToolBar_OnIsSignalConnected(const QToolBar* self, intptr_t slot);
bool QToolBar_QBaseIsSignalConnected(const QToolBar* self, QMetaMethod* signal);
void QToolBar_Delete(QToolBar* self);

#ifdef __cplusplus
} /* extern C */
#endif

#endif